add git repo create/delete
