# internal/pkg/github/route/http/githubHandler.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"backend/config"
 	"backend/internal/pkg/domain"
 	"net/http"
 
@@ -11,35 +12,40 @@ type GithubHandler struct {
 	client *domain.GithubClientHandler
 }
 
-func NewGithubHandler(echo *echo.Echo) *GithubHandler {
+func NewGithubHandler(echo *echo.Echo, cfg config.Config) *GithubHandler {
 
 	handler := &GithubHandler{
-		client: domain.NewGithubClientHandler(),
+		client: domain.NewGithubClientHandler(cfg),
 	}
 
-	user := echo.Group("/api/v1/github")
+	github := echo.Group("/api/v1/github")
 	{
-		user.GET("/:owner", handler.getReposByOwner)
-		user.GET("/:owner/:repo", handler.getWorkflowsByRepo)
+		github.GET("/:owner", handler.getReposByOwner)
+		github.POST("/:owner", handler.createRepo)
+		github.GET("/:owner/:repo", handler.getWorkflowsByRepo)
+		github.DELETE("/:owner/:repo", handler.deleteRepo)
 	}
 
 	return handler
 }
 
-// @Summary					Get repos
-// @Description				Get repos by owner
-// @name						getReposByOwner
-// @Accept						json
-// @Produce					json
-// @Param						owner	path	string	true	"owner of the repos"
-// @Success					200		{array}	domain.GitRepo
-// @Router						/api/v1/github/{owner} [get]
+// @Summary		Get repos
+// @Description	Get repos by owner
+// @name		getReposByOwner
+// @Accept		json
+// @Produce		json
+// @Param		owner	path	string	true	"owner of the repos"
+// @Success		200		{array}	domain.GitRepo
+// @Router		/api/v1/github/{owner} [get]
 // @Security    ApiKeyAuth
 func (g *GithubHandler) getReposByOwner(c echo.Context) error {
 
 	owner := c.Param("owner")
 
-	repos := g.client.GetRepoList(owner)
+	repos, err := g.client.GetRepoList(owner)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, nil)
+	}
 
 	gitRepo := make([]domain.GitRepo, len(repos))
 
@@ -50,22 +56,26 @@ func (g *GithubHandler) getReposByOwner(c echo.Context) error {
 	return c.JSON(http.StatusOK, gitRepo)
 }
 
-// @Summary					Get workflows
-// @Description				Get workflows by owner, repo
-// @name						getWorkflowsByRepo
-// @Accept						json
-// @Produce					json
-// @Param						owner	path	string	true	"owner of the repo"
-// @Param						repo	path	string	true	"repo of the workflows"
-// @Success					200		{array}	domain.GitWorkflow
-// @Router						/api/v1/github/{owner}/{repo} [get]
+// @Summary		Get workflows
+// @Description	Get workflows by owner, repo
+// @name		getWorkflowsByRepo
+// @Accept		json
+// @Produce		json
+// @Param		owner	path	string	true	"owner of the repo"
+// @Param		repo	path	string	true	"repo of the workflows"
+// @Success		200		{array}	domain.GitWorkflow
+// @Router		/api/v1/github/{owner}/{repo} [get]
 // @Security    ApiKeyAuth
 func (g *GithubHandler) getWorkflowsByRepo(c echo.Context) error {
 
 	owner := c.Param("owner")
 	repo := c.Param("repo")
 
-	workflows := g.client.GetWorkflowList(owner, repo)
+	workflows, err := g.client.GetWorkflowList(owner, repo)
+
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, nil)
+	}
 
 	gitWorkflow := make([]domain.GitWorkflow, len(workflows))
 
@@ -75,4 +85,58 @@ func (g *GithubHandler) getWorkflowsByRepo(c echo.Context) error {
 	}
 
 	return c.JSON(http.StatusOK, gitWorkflow)
+}
+
+// @Summary		Create git Repo
+// @Description	Create git Repo
+// @name		createRepo
+// @Accept		json
+// @Produce		json
+// @Param		owner	path	string	true	"owner of the repo"
+// @Param		repo	body	domain.CreateGitRepo	true	"Repo Info body"
+// @Success		201		{object} string
+// @Router		/api/v1/github/{owner} [post]
+// @Security	ApiKeyAuth
+func (g *GithubHandler) createRepo(c echo.Context) error {
+
+	gitRepo := new(domain.CreateGitRepo)
+
+	if err := c.Bind(gitRepo); err != nil {
+		c.Error(err)
+		return c.JSON(http.StatusBadRequest, err)
+	}
+
+	repo, err := g.client.CreateRepo(gitRepo.Name, gitRepo.Description, gitRepo.IsPrivate, gitRepo.IsAutoInt)
+
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, err)
+	}
+
+	return c.JSON(http.StatusCreated, repo.GetName()+" create success ")
+
+}
+
+// @Summary		Delete git Repo
+// @Description	Delete git Repo
+// @name		deleteRepo
+// @Accept		json
+// @Produce		json
+// @Param		owner	path	string	true	"owner of the repo"
+// @Param		repo	path	string	true	"repo"
+// @Success		200		{object}	string
+// @Router		/api/v1/github/{owner}/{repo} [delete]
+// @Security    ApiKeyAuth
+func (g *GithubHandler) deleteRepo(c echo.Context) error {
+
+	owner := c.Param("owner")
+	repo := c.Param("repo")
+
+	err := g.client.DeleteRepo(owner, repo)
+
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, err)
+	}
+
+	return c.JSON(http.StatusOK, repo+" delete success")
+
 }
